Adding report charts - Part 23

--- a/TODO.txt
+++ b/TODO.txt
@@ -14,89 +14,6 @@
 
     . Acompanhamento individual: https://www.amcharts.com/demos/line-with-custom-bullets/
 
+. Remover multiplas chamadas de pegar todos os dados do projeto ao gerar o sankey chart. Ver TO-DO no código.
 
-
-
-#NOME E MÉDIA EVC DE UM USUÁRIO DISTINTO
-
-${"userName": $distinct(decisions.stakeholders.stakeholderName[%.idUser=1]),"evc": $average(decisions.options.Evaluations.evc[%.UserId=1])}
-
-{
-  "userName": "Alvaro Magnum",
-  "evc": 0.384
-}
-
-
-# MÉDIA EVC GERAL
-
-$average(decisions.options.Evaluations.evc)
-
-0.435
-
-
-# MÉDIA E-V-C USUÁRIO
-${"userName": $distinct(decisions.stakeholders.stakeholderName[%.idUser=1]), "e": $average($map(decisions.options.Evaluations.e[%.UserId=1], function($v, $k) {($v-1)/5})), "v": $average($map(decisions.options.Evaluations.v[%.UserId=1], function($v, $k) {($v-1)/5})), "c": $average($map(decisions.options.Evaluations.c[%.UserId=1], function($v, $k) {($v-1)/5}))}
-
-{
-  "userName": "Alvaro Magnum",
-  "e": 0.08,
-  "v": 0.24,
-  "c": 0.28
-}
-
-# MÉDIA E-V-C GERAL
-${"e": $average($map(decisions.options.Evaluations.e, function($v, $k) {($v-1)/5})), "v": $average($map(decisions.options.Evaluations.v, function($v, $k) {($v-1)/5})), "c": $average($map(decisions.options.Evaluations.c, function($v, $k) {($v-1)/5}))}
-
-{
-  "e": 0.2,
-  "v": 0.35,
-  "c": 0.325
-}
-
-# SELECIONAR TODOS OS STAKEHOLDERS
-[$distinct(decisions.stakeholders)]
-
-[
-  {
-    "id": 10,
-    "idUser": 1,
-    "stakeholderName": "Alvaro Magnum",
-    "courseName": "Ciência da Computação",
-    "idCourse": "12"
-  },
-  {
-    "id": 11,
-    "idUser": 2,
-    "stakeholderName": "Chico Tripa",
-    "courseName": "Ciência Política",
-    "idCourse": "7"
-  }
-]
-
-# EVC POR CURSO
-${"userName": $distinct(decisions.stakeholders.courseName[%.CourseId=12]),"evc": $average(decisions.options.Evaluations.evc[%.CourseId=12])}
-
-{
-  "evc": 0.54
-}
-
-# E-V-C POR CURSO
-${"courseName": $distinct(decisions.stakeholders.courseName[%.CourseId=12]), "e": $average($map(decisions.options.Evaluations.e[%.CourseId=12], function($v, $k) {($v-1)/5})), "v": $average($map(decisions.options.Evaluations.v[%.CourseId=12], function($v, $k) {($v-1)/5})), "c": $average($map(decisions.options.Evaluations.c[%.CourseId=12], function($v, $k) {($v-1)/5}))}
-
-# TODOS OS CURSOS
-$distinct(decisions.stakeholders.$.{"courseName": courseName, "idCourse": idCourse})
-
-[
-  {
-    "courseName": "Ciência da Computação",
-    "idCourse": "12"
-  },
-  {
-    "courseName": "Arquitetura e Urbanismo",
-    "idCourse": "3"
-  },
-  {
-    "courseName": "Administração",
-    "idCourse": "1"
-  }
-]
+. De vez em quando diz, incorreamente, que não existem decisões cadastradas para o usuário.
