--- a/TODO.txt
+++ b/TODO.txt
@@ -7,3 +7,5 @@
 . Usar biblioteca para melhorar cores dos gráficos (harmonizar)
 
 . Remover multiplas chamadas de pegar todos os dados do projeto ao gerar o sankey chart. Ver TO-DO no código.
+
+. Criar filtros na página de resultados.
