--- a/TODO.txt
+++ b/TODO.txt
@@ -9,3 +9,5 @@
 . Remover multiplas chamadas de pegar todos os dados do projeto ao gerar o sankey chart. Ver TO-DO no código.
 
 . Criar filtros na página de resultados.
+
+. Atualizar o json do projeto ao atualizar o usuário
