--- a/TODO.txt
+++ b/TODO.txt
@@ -9,3 +9,7 @@
 . Quando vai fazer um comparativo dos gráficos do EVC personalizado, na lista do administrador aparecem todas as pessoas de todos os projetos. Todavia, todos os evcs dos usuários não foram carregados, então dá erro ao pressionar o botão para exibir. Erro no método $("#btShowCustomChart").click(function() do custom.js
 
 . Colocar legenda de cores na página de resultados.
+
+. Impedir usuários de se cadastrar em mais de uma equipe.
+
+. Criar página de remoção de usuários da equipe.
