Adding an option for removing members. PART 3

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,17 +1,9 @@
 . Separar html / js / css
 
-. Criar página do ADMIN
-
 . Colocar mais filtros nos resultados: APENAS MINHA, COM/SEM RESTRIÇÕES, ETC.
 
 . O modo como as tooltips são exibidas nos nós da configuração do projeto, ao carregar do bd, não está otimizado. Estranho. Checar.
 
-. Quando vai fazer um comparativo dos gráficos do EVC personalizado, na lista do administrador aparecem todas as pessoas de todos os projetos. Todavia, todos os evcs dos usuários não foram carregados, então dá erro ao pressionar o botão para exibir. Erro no método $("#btShowCustomChart").click(function() do custom.js
-
 . Colocar legenda de cores na página de resultados.
 
-. Impedir usuários de se cadastrar em mais de uma equipe.
-
-. Criar página de remoção de usuários da equipe.
-
-. Checar se admin, ao entrar com chave-convite, fica associado ao projeto.
+. Depois de remover um usuário de um projeto, seu EVC em outro projeto está impactando o projeto atual. Não pode.
