--- a/TODO.txt
+++ b/TODO.txt
@@ -5,3 +5,7 @@
 . O modo como as tooltips são exibidas nos nós da configuração do projeto, ao carregar do bd, não está otimizado. Estranho. Checar.
 
 . O gráfico da evolução GERAL no modo administrativo não está fazendo a média dos snapshots.
+
+. Colocar mensagem de sucesso ao selecionar escolha de uma decisão. Checar outros locais.
+
+. Ver o que acontece com os inputs quando preenche automaticamente com histórico do navegador / teclado.
